include/arrowmetal.h

typedef struct am_array am_array;            // opaque, Metal-resident Arrow array
const char* am_version(void);
const char* am_device_name(void);
const char* am_last_error(void);             // thread-local, valid until the next call on this thread
// Lifecycle and interop (zero-copy when the producer's buffers are page aligned; otherwise one copy)
int  am_import(const struct ArrowSchema* schema, struct ArrowArray* array, am_array** out);
int  am_export(am_array* a, struct ArrowSchema* schema, struct ArrowArray* array);
void am_release(am_array* a);
int64_t     am_length(am_array* a);
int64_t     am_null_count(am_array* a);
const char* am_format(am_array* a);          // Arrow format string: c C s S i I l L f g b u z t... d:p,s
// Reductions. out_kind: 0 = int64 in out_i64, 1 = uint64 in out_u64 (same slot), 2 = float64 in out_f64.
// op: 0 sum, 1 min, 2 max, 3 mean. *is_null is set when there is no valid value.
int  am_reduce(am_array* a, int op, int64_t* out_i64, double* out_f64, int* out_kind, int* is_null);
// Notes: min/max skip NaN and report is_null when every valid value is NaN (pyarrow returns NaN there).
// float32 sums accumulate in float64 like Arrow. Float32 arithmetic kernels run in hardware float, which flushes
// subnormal results to zero on Apple GPUs; comparisons and Float64 math are exact.

// Element-wise. cmp op: 0 eq 1 ne 2 lt 3 le 4 gt 5 ge. arith op: 0 add 1 sub 2 mul 3 div.
int  am_compare_scalar(am_array* a, int op, const void* scalar, am_array** out);
int  am_compare_array(am_array* a, int op, am_array* b, am_array** out);
int  am_arith_scalar(am_array* a, int op, const void* scalar, am_array** out);
int  am_arith_array(am_array* a, int op, am_array* b, am_array** out);
int  am_cast(am_array* a, const char* format, am_array** out);
// Selection
int  am_filter(am_array* a, am_array* mask, am_array** out);
int  am_take(am_array* a, am_array* indices, am_array** out);
int  am_slice(am_array* a, int64_t offset, int64_t length, am_array** out);
// Sorting (GPU LSD radix sort; stable, nulls last, NaN after +inf).
// Float keys are canonicalised first: -0.0 sorts as 0.0 (they are equal, so the tie keeps input order)
// and every NaN is one value. Nulls and NaN stay at the end when `descending` is set -- a reversed order
// does not mirror them to the front -- and am_top_k maps its keys the same way, so it agrees with
// am_argsort element for element.
int  am_argsort(am_array* a, int descending, am_array** out);   // int32 indices
int  am_sort(am_array* a, int descending, am_array** out);      // sorted copy, same type
// Batching: between begin and end, every call on this thread appends to one GPU command buffer. The GPU runs
// once at end (or at the first call that must read a result, such as am_reduce or am_export).
int  am_batch_begin(void);
int  am_batch_end(void);
// ---------------------------------------------------------------------------------------------------
// Group-by over arbitrary key columns, the rest of the grouped aggregates, and the three scalar
// aggregates am_reduce_ex does not cover. See Kernels/GroupByKeys.swift and Kernels/AggregatesExtra.swift.
// ---------------------------------------------------------------------------------------------------

// An opaque key mapping: dense group ids for a set of key columns, plus the key values per group.
typedef struct am_groupby am_groupby;
// Maps `count` key columns (>= 1, all the same length) to dense group ids on the GPU and returns a
// handle. Any key type works: int8..int64, uint8..uint64, float32/float64 (-0.0 == 0.0, all NaNs one
// group), bool, temporal, date, utf8, binary, dictionary and decimal128/decimal256. Several columns are
// folded pairwise into one injective 64-bit key and re-encoded, so up to four (and more) columns are
// fine. A null key is not skipped: it forms its own group, as Arrow's hash aggregation does.
//
// Group ORDER is deterministic but is NOT pyarrow's first-seen order — it is ascending by key for
// numeric, boolean, temporal and decimal columns (nulls last), first-seen for utf8 and binary, and
// lexicographic in column order for several columns. Label the rows with am_group_by_keys_result.
int  am_group_by_keys(am_array** columns, int64_t count, am_groupby** out);
// Number of groups, or -1 for a NULL handle.
int64_t am_group_by_group_count(am_groupby* gb);
// The i-th key column, one row per group, in group order and with the input column's Arrow type.
int  am_group_by_keys_result(am_groupby* gb, int64_t i, am_array** out);
// The dense group id of every row (int32, never null) — the key column am_group_by wants.
int  am_group_by_ids(am_groupby* gb, am_array** out);
void am_group_by_release(am_groupby* gb);
// One grouped aggregate, one row per group.
//
//  op  Arrow function            values          result type          notes
//  --  ------------------------  --------------  -------------------  ----------------------------------
//   0  hash_sum                  numeric         int64/uint64/double  integers wrap in 64 bits
//   1  hash_count_all            (may be NULL)   int64                rows per group, nulls included
//   2  hash_count                any             int64                non-null values per group
//   3  hash_mean                 numeric         double
//   4  hash_min                  numeric         values' type         fused kernel, NaN skipped
//   5  hash_max                  numeric         values' type
//   6  hash_min_max              numeric         struct<min, max>     one read of the values
//   7  hash_first                numeric         values' type         first non-null in row order
//   8  hash_last                 numeric         values' type
//   9  hash_first_last           numeric         struct<first, last>
//  10  hash_one                  numeric         values' type         the lowest row of the group
//  11  hash_list                 numeric         list<values' type>   every value, in row order
//  12  hash_distinct             numeric         list<values' type>   distinct non-null values, ascending
//  13  hash_count_distinct       numeric         int64
//  14  hash_any                  boolean         boolean
//  15  hash_all                  boolean         boolean
//  16  hash_product              numeric         int64 / double       GPU segmented multiply, wraps
//  17  hash_variance (pop)       numeric         double               ddof = 0; float32 deviations
//  18  hash_variance (sample)    numeric         double               ddof = 1
//  19  hash_stddev (pop)         numeric         double
//  20  hash_stddev (sample)      numeric         double
//  21  hash_approximate_median   numeric         double               exact: a GPU sort, not a sketch
//  22  hash_quantile             numeric         double               p1 = q in [0, 1], linear interpolation
//  23  hash_skew                 numeric         double               biased (population), Arrow's default
//  24  hash_kurtosis             numeric         double               excess kurtosis, biased
//  25  hash_tdigest              numeric         double               p1 = q; GPU sort + CPU centroid merge
//
// A group with no value to answer with is null. Temporal columns aggregate their storage integers.
// Ops 17-20 form their deviations in float32 (about 1e-6 relative), so a float64 value column is
// narrowed here rather than rejected. Ops 23 and 24 do the same and land near 1e-5.
int  am_group_agg_ex(am_groupby* gb, am_array* values /* NULL only for op 1 */, int op, double p1, am_array** out);
// ---------------------------------------------------------------------------------------------------
// The lazy query engine: a whole plan in one call (docs/ENGINE.md).
//
// Register the tables the plan reads once with am_plan_source_create (it takes am_array handles you already
// hold and retains them), then send the plan as JSON. The engine type-checks it, optimizes it
// (predicate pushdown, projection pruning, filter fusion, constant folding, expression CSE, join
// reordering), lowers it to physical operators with maximal fused Metal kernels, and runs the whole
// thing inside one command buffer.
//
//   plan   := {"op": OP, ...}
//   OP     := "scan"        {"source": NAME, "columns": [NAME, ...]?}
//           | "filter"      {"input": plan, "predicate": SEXPR}
//           | "select"      {"input": plan, "exprs": [[NAME, SEXPR], ...]}
//           | "with_columns"{"input": plan, "exprs": [[NAME, SEXPR], ...]}
//           | "aggregate"   {"input": plan, "aggs": [[AGGOP, NAME, SEXPR?], ...]}
//           | "group_by"    {"input": plan, "keys": [[NAME, SEXPR], ...], "aggs": [...]}
//           | "sort"        {"input": plan, "by": [[NAME, DESCENDING], ...]}
//           | "limit"       {"input": plan, "count": INT, "offset": INT?}
//           | "unique"      {"input": plan, "subset": [NAME, ...]?}
//           | "join"        {"left": plan, "right": plan, "left_on": [...], "right_on": [...],
//                            "how": "inner"|"left"|"right"|"full"|"semi"|"anti", "suffix": STR?}
//           | "join_asof"   {"left": plan, "right": plan, "left_on": NAME, "right_on": NAME,
//                            "by": [...]?, "by_right": [...]?, "tolerance": INT?,
//                            "strategy": "backward"|"forward"|"nearest"?, "suffix": STR?}
//           | "concat"      {"inputs": [plan, ...]}
//           | "window"      {"input": plan, "specs": [{"name": NAME, "fn": WFN, "column": NAME?,
//                            "n": INT?, "partition_by": [...]?, "order_by": [[NAME, DESC], ...]?}, ...]}
//           | "explode"     {"input": plan, "columns": [NAME]}
//   AGGOP  := "sum" | "min" | "max" | "mean" | "count"
//   WFN    := "row_number" | "rank" | "dense_rank" | "lag" | "lead" | "cum_sum"
//           | "rolling_sum" | "rolling_mean" | "rolling_min" | "rolling_max"
//           | "sum" | "min" | "max" | "mean" | "count"     -- a whole-partition aggregate
//   SEXPR  := the expression grammar above, verbatim.
//
// Example: sum(amount) by region where amount > 100, biggest first, top 10.
//   {"op":"limit","count":10,"input":
//     {"op":"sort","by":[["total",true]],"input":
//       {"op":"group_by","keys":[["region","(col \"region\")"]],
//        "aggs":[["sum","total","(col \"amount\")"]],"input":
//         {"op":"filter","predicate":"(gt (col \"amount\") (int 100))","input":
//           {"op":"scan","source":"sales"}}}}}
//
// am_plan_explain returns the optimized logical plan and the physical plan it lowers to, as text
// valid until the next call on this thread (NULL plus am_last_error() when the plan does not
// type-check). am_plan_run returns a result handle; am_plan_column hands out a new am_array handle
// the caller releases with am_release, and the result itself with am_plan_result_release.
typedef struct am_plan_source_t am_plan_source;
typedef struct am_plan_result_t am_plan_result;
int  am_plan_source_create(const char* name, am_array** columns, const char** names,
                           int64_t n_columns, am_plan_source** out);
void am_plan_source_release(am_plan_source* s);
int  am_plan_run(const char* plan_json, am_plan_source** sources, int64_t n_sources, int optimize,
                 am_plan_result** out);
const char* am_plan_explain(const char* plan_json, am_plan_source** sources, int64_t n_sources,
                            int optimize);
int64_t     am_plan_column_count(am_plan_result* r);
int64_t     am_plan_row_count(am_plan_result* r);
const char* am_plan_column_name(am_plan_result* r, int64_t i);
int         am_plan_column(am_plan_result* r, int64_t i, am_array** out);
void        am_plan_result_release(am_plan_result* r);